2023-07-09T00:38:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5497156815 # 975
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-09
* notice: last 14d: unq all: 1 3
* notice: prev accum: outdated-unq outdated-all / unq all: 74 188 / 76 201
* notice: next accum: outdated-unq outdated-all / unq all: 75 198 / 76 201
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-24] / []

2022-12-11T08:12:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3668085984 # 694
* notice: last 14d: unq all: 8 11
* notice: prev accum: outdated-unq outdated-all / unq all: 53 142 / 62 154
* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 62 154
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -1 / 1 2
* notice: removed / changed dates: [] / [2022-11-27]

2022-12-10T16:13:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3664957397 # 692
* notice: last 14d: unq all: 9 12
* notice: prev accum: outdated-unq outdated-all / unq all: 53 142 / 61 153
* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 62 154
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-12-10]

2022-12-09T00:54:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3653439526 # 687
* notice: last 14d: unq all: 8 11
* notice: prev accum: outdated-unq outdated-all / unq all: 53 142 / 60 151
* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 61 153
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-12-08]
